Refactor Java code and add comments